Updated the navigation-bar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/ded7193994.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/E-Commerce-Shop-REST-API-Project/style.css" />
   </head>
   <body>
     <!-- Header -->
@@ -45,6 +45,6 @@
       </nav>
     </header>
 
-    <script src="/script.js"></script>
+    <script src="/E-Commerce-Shop-REST-API-Project/script.js"></script>
   </body>
 </html>
