Updated the navigation-bar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header -->
     <header class="header" id="header">
       <nav class="navbar container">
-        <a href="/index.html">
+        <a href="/E-Commerce-Shop-REST-API-Project/index.html">
           <h2 class="logo" title="Main Page">ArtConnection</h2>
         </a>
 
