Added scroll to the top btn

--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
       </nav>
     </header>
 
+    <!-- Scroll to the top btn -->
+    <button
+      onclick="topFunction()"
+      class="btn scrollToTop-btn"
+      id="myBtn"
+      title="Go to top"
+    >
+      <i class="fa-solid fa-arrow-up"></i>
+    </button>
+
     <script src="/E-Commerce-Shop-REST-API-Project/script.js"></script>
   </body>
 </html>
