--- a/index.html
+++ b/index.html
@@ -45,6 +45,44 @@
       </nav>
     </header>
 
+    <!-- Menu -->
+    <section class="menu" id="menu">
+      <!-- menu items -->
+      <div class="section-center">
+        <!-- single item -->
+        <!-- <article class="menu-item">
+          <div class="img-container">
+            <img src="${item.img}" class="photo" alt="" />
+            <div class="image-overlay image-overlay-blur">
+              <button class="btn overlay-btn" onclick="addToCart(${item.id})" title="Add to shopping cart">
+                <span
+                  ><i
+                    class="
+                      fa-solid fa-cart-shopping
+                      shoppingBag-icon
+                      overlay-icon
+                    "
+                  ></i></span
+                >Add to cart
+              </button>
+            </div>
+          </div>
+          <div class="item-info-right" title="Add to favourites">
+            <i class="fa-solid fa-heart heart-icon"></i>
+          </div>
+          <div class="item-info">
+            <h3>${item.name}</h3>
+            <h3 class="item-description">${item.desc}</h3>
+            <h3 class="colors">${item.color}</h3>
+            <h3 class="price">
+              ${item.price}<span class="currency"> ${item.currency}</span>
+            </h3>
+          </div>
+        </article> -->
+        <!-- end of single item -->
+      </div>
+    </section>
+
     <!-- Scroll to the top btn -->
     <button
       onclick="topFunction()"
