--- a/index.html
+++ b/index.html
@@ -83,6 +83,140 @@
       </div>
     </section>
 
+    <!-- Everything in the shopping cart -->
+    <div class="shopping-cart" id="shopping-cart">
+      <!-- Header -->
+      <!-- <header class="header" id="header">
+        <nav class="navbar container">
+          <a href="">
+            <h2 class="logo" title="Main Page">ArtConnection</h2>
+          </a>
+
+          <div class="list">
+            <button
+              class="btn place-items-center"
+              id="heart-icon"
+              title="Favourites"
+            >
+              <i class="fa-solid fa-heart heart-icon"></i>
+            </button>
+
+            <button
+              class="btn place-items-center"
+              id="shoppingBag-icon"
+              title="Shopping Cart"
+            >
+              <i
+                href=""
+                class="
+                  fa-solid fa-cart-shopping
+                  shoppingBag-icon
+                  cart-shoppingBag-icon
+                "
+              ></i>
+            </button>
+          </div>
+        </nav>
+      </header> -->
+
+      <!-- Shopping Cart -->
+      <div class="cart-top">
+        <div class="cart-title">
+          <h2>Shopping Cart</h2>
+        </div>
+        <div class="cart-description">
+          <!-- <h3 class="cart-count">1 item &nbsp;|</h3>
+          <h3 class="cart-price">BGN 150</h3> -->
+        </div>
+      </div>
+
+      <!-- Shopping cart menu -->
+      <div class="cart-menu">
+        <!-- Shopping cart menu items -->
+        <!-- <div class="img-container cart-container">
+          <img src="/images/image1.jpg" class="photo" alt="" />
+          <div class="item-info cart-item-info">
+            <h3>Product Name</h3>
+            <h3 class="item-description">Item Description</h3>
+            <h3 class="colors">1 Color</h3>
+            <h3 class="price cart-item-price">
+              150<span class="currency"> BGN</span>
+            </h3>
+            <div class="cart-quantity-container">
+              <i class="fa-solid fa-minus minus-icon"></i>
+              <h3 class="cart-quantity">1</h3>
+              <i class="fa-solid fa-plus plus-icon"></i>
+            </div>
+            <div class="cart-icon-container">
+              <i class="fa-solid fa-heart heart-icon cart-heart-icon"></i>
+              <i class="fa-regular fa-trash-can cart-trash-icon"></i>
+            </div>
+          </div>
+        </div> -->
+        <!-- <div class="img-container cart-container">
+          <img src="/images/image1.jpg" class="photo" alt="" />
+          <div class="item-info cart-item-info">
+              <h3>Product Name</h3>
+              <h3 class="item-description">Item Description</h3>
+              <h3 class="colors">1 Color</h3>
+              <h3 class="price cart-item-price">
+                  150<span class="currency"> BGN</span>
+                </h3>
+                <div class="cart-quantity-container">
+                    <i class="fa-solid fa-minus minus-icon"></i>
+                    <h3 class="cart-quantity">1</h3>
+                    <i class="fa-solid fa-plus plus-icon"></i>
+                </div>
+                <div class="cart-icon-container">
+                    <i class="fa-solid fa-heart heart-icon cart-heart-icon"></i>
+                    <i class="fa-regular fa-trash-can cart-trash-icon"></i>
+                </div>
+            </div>
+        </div> -->
+      </div>
+      <div class="cart-checkout-container">
+        <button class="btn cart-btn">
+          <h3>Go to Checkout</h3>
+        </button>
+      </div>
+    </div>
+
+    <!-- Everything in the favourites -->
+    <div class="favourites" id="favourites">
+      <!-- favourites -->
+      <div class="favourites-top">
+        <div class="favourites-title">
+          <h2>Favourites</h2>
+        </div>
+        <div class="favourites-description">
+          <!-- <h3 class="favourites-count">1 item</h3>-->
+        </div>
+      </div>
+
+      <!-- Favourites menu -->
+      <div class="favourites-menu">
+        <!-- Favourites menu items -->
+        <!-- <div class="img-container favourites-container">
+        <img src="/images/image1.jpg" class="photo" alt="" />
+        <div class="item-info cart-item-info">
+          <h3>Product Name</h3>
+          <h3 class="item-description">Item Description</h3>
+          <h3 class="colors">1 Color</h3>
+          <div class="favourites-icon-container">
+            <i
+              class="
+                fa-solid fa-cart-shopping
+                shoppingBag-icon
+                favourites-cart-icon
+              "
+            ></i>
+            <i class="fa-regular fa-trash-can favourites-trash-icon"></i>
+          </div>
+        </div>
+      </div> -->
+      </div>
+    </div>
+
     <!-- Scroll to the top btn -->
     <button
       onclick="topFunction()"
